<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_480_320_list_h"
    >
    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    android:layout_marginTop="3dip"> 
    <TextView android:layout_height="fill_parent"   
    android:text="@string/dyshouruhjmh"  
    android:width="110dip" 
    android:layout_width="wrap_content"
    android:gravity="center"
    style="@style/fontBlack12" 
    />   
    <TextView android:id="@+id/dyshouruheji" 
		android:layout_width="wrap_content" 
       	android:layout_height="wrap_content" 
       	style="@style/fontBlack12"/> 
    </LinearLayout>    
    
    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    android:layout_marginTop="10dip" 
	android:layout_marginLeft="10dip"  
    android:layout_marginRight="5dip"> 
    <TextView android:layout_height="fill_parent"   
    android:text="@string/shouru_leibie"  
    android:width="80dip" 
    android:layout_width="wrap_content"
    android:gravity="center"
    style="@style/fontBlack14" 
    />   
    <TextView android:text="@string/jine"  
    android:width="80dip"
    android:layout_width="wrap_content" 
    android:layout_height="fill_parent"
    android:gravity="center"
    style="@style/fontBlack14" 
    />  
    <TextView android:layout_height="fill_parent"           
    android:text="@string/riqi" 
    android:width="80dip" 
    android:layout_width="wrap_content" 
    android:gravity="center"
    style="@style/fontBlack14" 
    />  
    <TextView android:layout_height="fill_parent"           
	android:text="@string/zhaiyao"  
	android:width="90dip"
	android:layout_width="wrap_content" 
	android:gravity="center"
	style="@style/fontBlack14" 
    />
	</LinearLayout >
    <ListView android:layout_width="wrap_content" 
        android:layout_height="170dip"
        android:id="@+id/shouru_list"
        android:cacheColorHint="#00000000"
        android:layout_marginTop="5dip" 
		android:layout_marginLeft="5dip"  
    	android:layout_marginRight="5dip">
    </ListView>

    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    android:layout_marginTop="3dip">
	   <Button android:id="@+id/fhimgbt"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/fh32_32"
			style="@style/fontBlack12"
			android:layout_marginLeft="10dip"/>
	    <Button android:id="@+id/xjimgbt"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/xz32_32"
			style="@style/fontBlack12"
			android:layout_marginLeft="20dip"  
	    	android:layout_marginRight="20dip"/>	
	   	<Button android:id="@+id/ssimgbt"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/ss32_32"
			style="@style/fontBlack12"/>
    </LinearLayout>
</LinearLayout >
