<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_320_480_sreach_s"
    >
    <ScrollView android:layout_width="fill_parent"
		    android:layout_height="52dip"> 
    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="fill_parent" 
    android:orientation="horizontal">
    <TextView android:id="@+id/zhichusreachxq"
    	android:layout_marginLeft="10dip"
		android:layout_marginRight="5dip"
		android:layout_width="wrap_content" 
       	android:layout_height="wrap_content" 
       	style="@style/fontBlack12"/>
    </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    android:layout_marginTop="6dip" 
	android:layout_marginLeft="10dip"  
    android:layout_marginRight="5dip"> 
    <TextView android:layout_height="fill_parent"   
    android:text="@string/zhichu_leibie"  
    android:width="80dip" 
    android:layout_width="wrap_content"
    android:gravity="center"
    style="@style/fontBlack14" 
    />   
    <TextView android:text="@string/jine"  
    android:width="80dip"
    android:layout_width="wrap_content" 
    android:layout_height="fill_parent"
    android:gravity="center"
    style="@style/fontBlack14" 
    />  
    <TextView android:layout_height="fill_parent"           
    android:text="@string/riqi" 
    android:width="80dip" 
    android:layout_width="wrap_content" 
    android:gravity="center"
    style="@style/fontBlack14" 
    />  
    <TextView android:layout_height="fill_parent"           
	android:text="@string/zhaiyao"  
	android:width="90dip"
	android:layout_width="wrap_content" 
	android:gravity="center"
	style="@style/fontBlack14" 
    />
	</LinearLayout >
	
    <ListView android:layout_width="wrap_content" 
        android:layout_height="305dip"
        android:id="@+id/zhichu_list"
        android:cacheColorHint="#00000000"
        android:layout_marginTop="5dip" 
		android:layout_marginLeft="5dip"  
    	android:layout_marginRight="5dip">
    </ListView>
    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    android:layout_marginTop="2dip">
    <Button android:id="@+id/fhimgbt"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:background="@drawable/fh32_32"
		style="@style/fontBlack12"
		android:layout_marginLeft="10dip"/>
    </LinearLayout>
</LinearLayout >
