<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_480_320_cdbg_h"
    >
    <LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="vertical"> 
    	<GridView android:id="@+id/grid"
	    android:layoutAnimation="@anim/layout_grid_fade"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp"
	    android:verticalSpacing="10dp"
	    android:horizontalSpacing="10dp"
	    android:numColumns="auto_fit"
	    android:columnWidth="72dp"
	    android:stretchMode="columnWidth"
	    android:gravity="center" ></GridView> 
	</LinearLayout >
	<LinearLayout android:layout_width="wrap_content"    
    android:layout_height="wrap_content" 
    android:orientation="vertical"> 
    <TextView android:layout_height="fill_parent"   
    android:text="@string/guanyu1"  
    android:width="300dip" 
    android:layout_width="wrap_content"
    android:gravity="left"
    android:layout_marginTop="25dip"
    android:layout_marginLeft="10dip"
    style="@style/fontBlack14" 
    android:id="@+id/guanyu1"
    />
    <TextView android:layout_height="fill_parent"   
    android:text="@string/guanyu2"  
    android:width="310dip" 
    android:layout_width="wrap_content"
    android:gravity="left"
    android:layout_marginLeft="10dip"
    style="@style/fontBlack14" 
    android:id="@+id/guanyu2"
    />  
    <TextView android:layout_height="fill_parent"   
    android:text="@string/guanyu3"  
    android:width="300dip" 
    android:layout_width="wrap_content"
    android:gravity="left"
    android:layout_marginLeft="10dip"
    style="@style/fontBlack14" 
    android:id="@+id/guanyu3"
    />     
	</LinearLayout >
</LinearLayout >
