<?xml version="1.0" encoding="utf-8"?> 

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical" 
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:background="@drawable/bg_480_320_cd_h"> 
    <ScrollView android:layout_width="fill_parent"
		    android:layout_height="228dip">
	<LinearLayout android:orientation="vertical" 
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"> 
		<LinearLayout android:layout_marginTop="10dip"
	     	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"> 
	        <TextView android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content" 
	        	android:text="@string/pwdstart" 
	        	android:width="100dip"
				style="@style/fontBlack14"
				android:gravity="right"
				android:paddingRight="5dip"/>
	        <EditText android:id="@+id/password_start" 
				android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:password="true" 
	        	style="@style/fontBlack14"
	        	android:width="200dip"></EditText> 
	    </LinearLayout>  
		
	    <LinearLayout android:layout_marginTop="10dip"
	     	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"> 
	        <TextView android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content" 
	        	android:text="@string/pwdone" 
	        	android:width="100dip"
				style="@style/fontBlack14"
				android:gravity="right"
				android:paddingRight="5dip"/>
	        <EditText android:id="@+id/password_edit" 
				android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:password="true" 
	        	style="@style/fontBlack14"
	        	android:width="200dip"></EditText> 
	    </LinearLayout>  
	    
	    <LinearLayout android:layout_marginTop="10dip"
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"> 
		    <TextView android:layout_height="wrap_content" 
		    	android:text="@string/pwdtwo" 
		    	android:layout_width="fill_parent"
				style="@style/fontBlack14"
				android:width="100dip" 
				android:gravity="right"
				android:paddingRight="5dip"/>
		    <EditText android:id="@+id/repassword_edit" 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content"  
		    	android:password="true" 
	        	style="@style/fontBlack14" 
		    	android:width="200dip"></EditText> 
	    </LinearLayout>  
	</LinearLayout> 
	</ScrollView>
	<LinearLayout android:layout_width="wrap_content"    
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal"
	     	android:layout_marginTop="4dip">
		    <Button android:id="@+id/fhimgbt"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/fh32_32"
				style="@style/fontBlack12"
				android:layout_marginLeft="10dip"/>
		    <Button android:id="@+id/bcimgbt"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/bc32_32"
				style="@style/fontBlack12"
			android:layout_marginLeft="20dip" />
	 </LinearLayout> 
</LinearLayout>